# Misskey-Welcomebot

./: .env.example  .gitignore  README.md  logging.ini  logging_styles.py  main.py  mainbot.py  ngwords.py  ngwords.txt  note_action.py  pyproject.toml  pytest.ini  requirements.txt  response.json  sample.env
.github/workflows/: pytest.yml
config/: response.json
ng_words/: dummy
src/: emojis.py  environs.py  keep_alive.py  logging_styles.py  mainbot.py  misskey_api.py  ngwords.py  note_action.py  rate_limitter.py  userdb.py  utils.py
tests/: test_emoji.py  test_environs.py  test_misskey.py  test_ngwords.py  test_ngwords.txt  test_note.json  test_note_reply.json  test_utils.py
utils/: convert.py
